:sparkles: Create light mode styles

--- a/style.css
+++ b/style.css
@@ -13,8 +13,19 @@
   --text-color: hsl(var(--hue), 40%, 98%);
   --primary-color: hsl(var(--hue), 100%, 63%);
   --controls-bg-color: hsl(var(--hue), 0%, 14%);
+  --button-secondary: hsl(var(--hue), 40%, 98%);
 
   font-size: clamp(40%, 1% + 2vw, 62.5%);
+}
+
+html.light {
+  --bg-color: hsl(var(--hue), 40%, 98%);
+  --text-color: hsl(var(--hue), 5%, 7%);
+}
+
+html.light .ph-sun,
+html:not(.light) .ph-moon {
+  display: none;
 }
 
 body,
@@ -43,6 +54,15 @@ body {
   display: flex;
 }
 
+#toggle-mode {
+  position: absolute;
+  top: 3.2rem;
+  right: 3.2rem;
+
+  font-size: 3.2rem;
+  color: var(--text-color);
+}
+
 #timer {
   font-family: 'Roboto', sans-serif;
   font-size: 9.6rem;
@@ -69,7 +89,7 @@ button {
 }
 
 .secondary {
-  color: var(--text-color);
+  color: var(--button-secondary);
 }
 
 .running .ph-play-circle,
